Fixed bug for sub-menus displaying 'block' while sidebar is collapsed

--- a/src/styles/sass/components/_sidebar.scss
+++ b/src/styles/sass/components/_sidebar.scss
@@ -311,7 +311,8 @@
               width: 20rem;
               margin-left: 3px !important;
               border-radius: 4px;
-              display: block !important;
+              // display: block !important;
+              display: none;
             }
           }
           &.active {
